--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "scripts": {
         "dev-parcel": "npx parcel ./index.html",
         "dev": "npx nodemon ./out/serverDev.js",
-        "app": "node ./build/serverProd.js",
         "start": "node ./out/serverProd.js",
+        "app": "node ./build/index.cjs",
+        "build": "webpack",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
@@ -18,25 +19,14 @@
         "@types/express": "^5.0.2",
         "@types/livereload": "^0.9.5",
         "@types/three": "^0.176.0",
-        "assert": "^2.1.0",
-        "browserify-zlib": "^0.2.0",
-        "buffer": "^6.0.3",
         "connect-livereload": "^0.6.1",
-        "crypto-browserify": "^3.12.1",
-        "events": "^3.3.0",
         "livereload": "^0.9.3",
         "nodemon": "^3.1.10",
         "parcel": "^2.15.2",
-        "path-browserify": "^1.0.1",
-        "process": "^0.11.10",
-        "querystring-es3": "^0.2.1",
-        "stream-browserify": "^3.0.0",
-        "stream-http": "^3.2.0",
-        "string_decoder": "^1.3.0",
+        "ts-loader": "^9.5.2",
         "typescript": "^5.8.3",
-        "url": "^0.11.4",
-        "util": "^0.12.5",
-        "vm-browserify": "^1.1.2"
+        "webpack": "^5.99.9",
+        "webpack-cli": "^6.0.1"
     },
     "dependencies": {
         "express": "^5.1.0",
