--- a/package.json
+++ b/package.json
@@ -2,12 +2,9 @@
     "name": "multiple-window-spheres-animation",
     "version": "1.0.0",
     "scripts": {
-        "dev-parcel": "npx parcel ./index.html",
         "dev": "npx nodemon ./out/serverDev.js",
         "start": "node ./out/serverProd.js",
-        "app": "node ./build/index.cjs",
-        "build": "webpack",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "build": "webpack --mode=production"
     },
     "keywords": [],
     "author": "Michał Mrózek",
@@ -20,9 +17,9 @@
         "@types/livereload": "^0.9.5",
         "@types/three": "^0.176.0",
         "connect-livereload": "^0.6.1",
+        "html-webpack-plugin": "^5.6.3",
         "livereload": "^0.9.3",
         "nodemon": "^3.1.10",
-        "parcel": "^2.15.2",
         "ts-loader": "^9.5.2",
         "typescript": "^5.8.3",
         "webpack": "^5.99.9",
